[package]
name = "redis2vals2ql"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.rs-kvstore-vals2ql]
path = "../../.."

[dependencies.tokio]
version = "1"
default-features = false
features = [
	"macros",
	"rt-multi-thread",
	"net",
]

[dependencies.async-graphql-axum]
version = "7"
default-features = false
features = [
]

[dependencies.axum]
version = "0"
default-features = false
features = [
	"http1",
	"json",
	"matched-path",
	"original-uri",
	"query",
	"tokio",
	"tower-log",
	"tracing",
]

